# utrac

./: CHANGELOG  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac
debian/: changelog  control  copyright  rules
src/: Makefile  Makefile.am  Makefile.in  ut_charset.c  ut_conversion.c  ut_loading.c  ut_recognition1.c  ut_recognition2.c  ut_text.h  ut_utils.c  utrac  utrac.c  utrac.h  utrac_cmd.c
