SUBDIRS = src
EXTRA_DIST =						\
	CHANGELOG						\
	CREDITS							\
	Doxyfile						\
	autogen.sh						\
	debian/control					\
	debian/changelog				\
	debian/compat					\
	debian/control					\
	debian/copyright				\
	debian/cron.d.ex				\
	debian/dirs						\
	debian/docs						\
	debian/emacsen-install.ex		\
	debian/emacsen-remove.ex		\
	debian/emacsen-startup.ex		\
	debian/files					\
	debian/init.d.ex				\
	debian/init.d.lsb.ex			\
	debian/manpage.1.ex				\
	debian/manpage.sgml.ex			\
	debian/manpage.xml.ex			\
	debian/menu.ex					\
	debian/postinst.ex				\
	debian/postrm.ex				\
	debian/preinst.ex				\
	debian/prerm.ex					\
	debian/rules					\
	debian/utrac.debhelper.log		\
	debian/utrac.default.ex			\
	debian/utrac.doc-base.EX		\
	debian/utrac.substvars			\
	debian/watch.ex
